changed all footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header flex">
-          <div class="icon"><img src="img/icon-2.png" alt=""></div>
+          <div class="icon"><img class="head_icon" src="img/Porter_logo-2.png" alt="" /></div>
 
           <nav>
             <ul class="nav flex">
@@ -31,61 +31,54 @@
       <div class="container">
         <div class="cards flex">
           <div class="card_left">
-            <h2 class="sec_tit">Передовых технологии
-              для молочного животноводства</h2>
-            <p class="sec_txt">Системы механизации, автоматизации
-              и управления всеми процессами на предприятии</p>
+            <h2 class="sec_tit">
+              Передовых технологии для молочного животноводства
+            </h2>
+            <p class="sec_txt">
+              Системы механизации, автоматизации и управления всеми процессами
+              на предприятии
+            </p>
 
             <button class="btn btn__2">заказать</button>
           </div>
-          <div class="card_right"><img src="img/porter_5.jpg" alt=""></div>
+          <div class="card_right"><img src="img/porter_5.jpg" alt="" /></div>
         </div>
       </div>
     </section>
 
     <section class="stroke">
       <div class="container">
-      <marquee behavior="" direction="" class="beg_stroke">porter Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus sint architecto, distinctio dolore quisquam laudantium nostrum maxime aliquid molestiae aspernatur quasi voluptatum optio dicta corporis delectus beatae quod et harum!</marquee>
-    </div>
+        <marquee behavior="" direction="" class="beg_stroke"
+          >porter Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Doloribus sint architecto, distinctio dolore quisquam laudantium
+          nostrum maxime aliquid molestiae aspernatur quasi voluptatum optio
+          dicta corporis delectus beatae quod et harum!</marquee
+        >
+      </div>
     </section>
 
     <footer>
       <div class="container">
+
+          <div class="footer_list">
+            <ul class="nav">
+              <li><a href="#" class="header_link footer_link">menu</a></li>
+              <li><a href="#" class="header_link footer_link">menu</a></li>
+              <li><a href="#" class="header_link footer_link">menu</a></li>
+   
+
         <div class="footer_cards flex">
-          <div class="footer_card">
-            <div class="icon"><img src="img/icon-2.png" alt=""></div>
-            <div class="ics">
-              <div class="ic"></div>
-              <div class="ic"></div>
-              <div class="ic"></div>
-            </div>
-          </div>
+          <div class="footer_card_left">
+            <div class="icon footer_logo"><img  src="img/Porter_logo-2.png" alt="" /></div>
 
-          <div class="footer_list">
-            <ul class="nav">
-              <li><a href="#" class="header_link footer_link">menu</a></li>
-              <li><a href="#" class="header_link footer_link">menu</a></li>
-              <li><a href="#" class="header_link footer_link">menu</a></li>
-            </ul>
           </div>
-
-          <div class="footer_list">
-            <ul class="nav">
-              <li><a href="#" class="header_link footer_link">number</a></li>
-              <li><a href="#" class="header_link footer_link">phon</a></li>
-              <li><a href="#" class="header_link footer_link">menu</a></li>
-            </ul>
+          <div class="footr_card_right flex">
+            <img src="img/porter_1.webp" alt="" class="footer_img" />
+            <img src="img/porter_2.jpg" alt="" class="footer_photo"/>
+            <img src="img/porter_3.jpeg" alt="" class="footer_img"/>
           </div>
-
-          <div class="footer_imges flex">
-            <div class="footer_img footer_img__1"><img src="img/porter_1.webp" alt=""></div>
-            <div class="footer_img"><img src="img/porter_2.jpg" alt=""></div>
-            <div class="footer_img footer_img__1"><img src="img/porter_3.jpeg" alt=""></div>
-          </div>
-
         </div>
       </div>
     </footer>
-
   </body>
 </html>
