changed some elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css">
   </head>
   <body>
     <header>
@@ -14,15 +15,15 @@
 
           <nav>
             <ul class="nav flex">
-              <li><a href="#" class="header_link">menu</a></li>
-              <li><a href="#" class="header_link">menu</a></li>
-              <li><a href="#" class="header_link">menu</a></li>
+              <li><a href="#" class="header_link">меню</a></li>
+              <li><a href="#" class="header_link">о нас</a></li>
+              <li><a href="#" class="header_link">контакты</a></li>
             </ul>
           </nav>
 
           <a href="#" class="phon">0505 505 400</a>
 
-          <button class="btn">заказать</button>
+          <button class="btn head_btn">заказать</button>
         </div>
       </div>
     </header>
@@ -57,6 +58,8 @@
       </div>
     </section>
 
+   
+
     <footer>
       <div class="container">
           <div class="footer_cards flex">
@@ -64,20 +67,37 @@
             <div class="icon footer_logo"><img  src="img/Porter_logo-2.png" alt="" /></div>
 
             <div class="footer_list">
-              <ul class="nav">
-                <li><a href="#" class="header_link footer_link">menu</a></li>
-                <li><a href="#" class="header_link footer_link">menu</a></li>
-                <li><a href="#" class="header_link footer_link">menu</a></li>
+              <ul class="nav flex">
+                <li><a href="#" class="header_link footer_link">меню</a></li>
+                <li><a href="#" class="header_link footer_link">о нас</a></li>
+                <li><a href="#" class="header_link footer_link">контакты</a></li>
               </ul>
             </div>
 
+            <div class="footer_icons flex">
+              <div class="footer_ic">
+                <a href="https://telegram.org/dl"><img src="img/telega.png" alt="" class="footer_icon"></a>
+              </div>
+
+              <div class="footer_ic">
+                <a href="https://telegram.org/dl"><img src="img/what.webp" alt="" class="footer_icon footer_icon__what"></a>
+              </div>
+
+              <div class="footer_ic">
+                <a href="+996 505 505 400"><img src="img/telephone.png" alt="" class="footer_icon footer_icon__phone"></a>
+              </div>
+            </div>
+
           </div>
-          <div class="footr_card_right flex">
-            <img src="img/porter_1.webp" alt="" class="footer_img" />
-            <img src="img/porter_2.jpg" alt="" class="footer_photo"/>
-            <img src="img/porter_3.jpeg" alt="" class="footer_img"/>
+          <div class="flex footr_card_right">
+            <img src="img/porter_1.webp" alt="" class="footer_imges" />
+            <img src="img/porter_2.jpg" alt="" class="footer_imges"/>
+            <img src="img/porter_3.jpeg" alt="" class="footer_imges"/>
+            <img src="img/porter_4.jpeg" alt="" class="footer_imges">
           </div>
         </div>
     </footer>
+
+    <script src="core.js"></script>
   </body>
 </html>
