changed some elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Porter taxi</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css">
   </head>
@@ -16,7 +16,7 @@
           <nav>
             <ul class="nav flex">
               <li><a href="#" class="header_link">меню</a></li>
-              <li><a href="#" class="header_link">о нас</a></li>
+              <li><a href="about.html" class="header_link">о нас</a></li>
               <li><a href="#" class="header_link">контакты</a></li>
             </ul>
           </nav>
